Fix(Login): make forgot password text smaller on mobile

--- a/app/login/styles.less
+++ b/app/login/styles.less
@@ -140,6 +140,11 @@ and (max-width: @screen-sm) {
         .icon-row > .icon {
             font-size: 30px;
         }
+
+        .password-reset,
+        .remember-me {
+            font-size: 14px;
+        }
     }
 }
 
